# matvec-sparse

./: .gitignore  CMakeLists.txt  CSR_Comm_on_MPI.csv  CSR_Local_Matmul_on_MPI.csv  CSR_MPI_SpMV.csv  CSR_REDUCED_SpMV.csv  CSR_Random_BrCast_Reduce_SpMV.csv  CSR_SpMV_Model.csv  CSR_SpMV_Model_Diagonal.csv  CSR_SpMV_Model_Random.csv  CSR_SpMV_Model_of_Random_BrCast_Reduce.csv  CSR_SpMV_based_on_Performance_Model.csv  CSR_SpMV_based_on_Real_Data.csv  CSR_SpMV_on_MPI.csv  CSR_SpMV_on_MPI_Test.csv  KNL_CSR_Comm_on_MPI.csv  KNL_CSR_Local_Matmul_on_MPI.csv  KNL_CSR_Random_BrCast_Reduce_SpMV.csv  KNL_CSR_SpMV_on_MPI_Test.csv  KNL_OMP_CSR_SpMV_Model.csv  KNL_OMP_CSR_SpMV_Model_on_Diagonal_Matrix.csv  KNL_OpenMP_Parallel_SpMV_on_Graphs.csv  KNL_SkyLake_OMP_CSR_SpMV_Model.csv  MPISpMVComputationResult.csv  MPISpMVResult.csv  MPI_SpMV_Model.csv  Makefile  New Model for Workshop.ipynb  OMP_CSR_SpMV_Model.csv  OMP_CSR_SpMV_Model_on_Diagonal_Matrix.csv  OldMPISpMVComputationResult.csv  OpenMP_Parallel_SpMV_on_Graphs.csv  OpenMP_SpMV_Plots.ipynb  PlotResults.ipynb  SeqSpMVResult.csv  SkyLake_OMP_CSR_SpMV_Model.csv  SkyLake_OMP_CSR_SpMV_Model_on_Diagonal_Matrix.csv  Skylake_CSR_Comm_on_MPI.csv  Skylake_CSR_Local_Matmul_on_MPI.csv  Skylake_CSR_Random_BrCast_Reduce_SpMV.csv  (+64 more)
input/: example.mtx
